// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CaseStudy /> when mounted should create a snapshot 1`] = `
<CaseStudy
  __typename="Project"
  id="58f43041f445ed0e26cd46e6"
  image="https://github.com/RyanCCollins/cdn/blob/master/brand-central/bcmockup.jpg?raw=true"
  title="HPE Brand Central"
>
  <withRouter(Anchor)
    path="/case-study/58f43041f445ed0e26cd46e6"
    plain={true}
  >
    <Anchor
      method="push"
      path="/case-study/58f43041f445ed0e26cd46e6"
      plain={true}
    >
      <styled.a
        onClick={[Function]}
        plain={true}
      >
        <a
          className="ckTJUm"
          onClick={[Function]}
        >
          <div>
            <WithAnimation
              duration={1000}
              isVisible={true}
            >
              <styled.div
                delay={0}
                duration={1000}
                isVisible={true}
                type="fadeIn"
              >
                <div
                  className="jOKFwR"
                  type="fadeIn"
                >
                  <Box
                    pad="large"
                  >
                    <styled.div
                      pad="large"
                    >
                      <div
                        className="bWdHyO"
                      >
                        <styled.div>
                          <div
                            className="innYbI"
                          >
                            <styled.div>
                              <div
                                className="kPGFVC"
                              >
                                <p>
                                  HPE Brand Central
                                </p>
                              </div>
                            </styled.div>
                            <styled.img
                              alt="HPE Brand Central"
                              imageSize="large"
                              src="https://github.com/RyanCCollins/cdn/blob/master/brand-central/bcmockup.jpg?raw=true"
                              style={
                                Object {
                                  "maxWidth": 700,
                                }
                              }
                            >
                              <img
                                alt="HPE Brand Central"
                                className="gcaPMe"
                                src="https://github.com/RyanCCollins/cdn/blob/master/brand-central/bcmockup.jpg?raw=true"
                                style={
                                  Object {
                                    "maxWidth": 700,
                                  }
                                }
                              />
                            </styled.img>
                          </div>
                        </styled.div>
                      </div>
                    </styled.div>
                  </Box>
                </div>
              </styled.div>
            </WithAnimation>
          </div>
        </a>
      </styled.a>
    </Anchor>
  </withRouter(Anchor)>
</CaseStudy>
`;

exports[`<CaseStudy /> when shallow rendered should create a snapshot 1`] = `
<withRouter(Anchor)
  path="/case-study/58f43041f445ed0e26cd46e6"
  plain={true}
>
  <div>
    <WithAnimation
      duration={1000}
      isVisible={false}
    >
      <Box
        pad="large"
      >
        <styled.div>
          <styled.div>
            <p>
              HPE Brand Central
            </p>
          </styled.div>
          <styled.img
            alt="HPE Brand Central"
            imageSize="large"
            src="https://github.com/RyanCCollins/cdn/blob/master/brand-central/bcmockup.jpg?raw=true"
            style={
              Object {
                "maxWidth": 700,
              }
            }
          />
        </styled.div>
      </Box>
    </WithAnimation>
  </div>
</withRouter(Anchor)>
`;
